test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-modify-policy/03-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-modify-policy
spec:
  rules:
  - name: cpol-data-sync-modify-rule
    generate:
      data:
        spec:
          hard:
            limits.cpu: '9'
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
---
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: gemini-ape
spec:
  hard:
    requests.cpu: '4'
    requests.memory: '16Gi'
    limits.cpu: '8'
    limits.memory: '16Gi'
