test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-modify-policy/04-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-data-sync-modify-policy
spec:
  rules:
  - name: cpol-data-sync-modify-rule
    generate:
      data:
        spec:
          hard:
            limits.cpu: '9'
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
