test/conformance/kuttl/generate/clusterpolicy/standard/data/sync/cpol-data-sync-modify-policy/06-assert.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resourcequota
  namespace: gemini-ape
spec:
  hard:
    limits.cpu: "9"
